[tool.poetry]
name = "rdfxml-burst"
version = "0.1.0"
description = ""
authors = ["Natanael Arndt <arndtn@gmail.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
ruff = "^0.7.1"
loguru = "^0.7.2"
lxml = "^5.3.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rdfxml-burst = "rdfxml_burst:burst"
